PLATOPS-1324: Passive scan is the default mode Active Scan is configurable.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,9 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# Below properties are used to configure Zap Api.
+# To override any of the the default values, specify the required config in the test suite's .conf file.
 
-# This library uses the below properties to configure and run Zap. To override any of the the default values,
-# specify the required config in the test suites .conf file.
 zap-automation-config {
 
   activeScan = false
