Set Failure Threshold Add url to spider and active scan.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,6 +18,12 @@
 zap-automation-config {
 
   activeScan = false
+
+  # Fails test only if the reported alert's severity is above or same as the provided failureThreshold.
+  # Example:
+  # failureThreshold = "Medium" will not fail the test if the report has only Low and Informational alerts.
+  # Test will fail if there are any Medium or High Alerts
+  # Accepted Values: High, Medium, Low
   failureThreshold = "Low"
 
 }
