Health Checking Test Url before starting zap testing Moved skipTearDown as a configurable property

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -26,4 +26,11 @@ zap-automation-config {
   # Accepted Values: High, Medium, Low
   failureThreshold = "Low"
 
+  # Changing the debug config will result in incorrect test results. Change this values only for debugging.
+  # healthCheck : Verifies if the testUrl provided for spider and active scan returns 2XX OR 3XX response
+  # skipTearDown: if enabled skips tearing down zap alerts, contex and policy
+  debug {
+    healthCheck = true
+    skipTearDown = false
+  }
 }
