moved ZapTest configuration into the references.conf.  Alert Filters not yet implemented.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -17,6 +17,7 @@
 
 zap-automation-config {
 
+  # Conducts a ZAP active scan if set to true.
   activeScan = false
 
   # Fails test only if the reported alert's severity is above or same as the provided failureThreshold.
@@ -26,11 +27,19 @@ zap-automation-config {
   # Accepted Values: High, Medium, Low
   failureThreshold = "Low"
 
-  # Changing the debug config will result in incorrect test results. Change this values only for debugging.
-  # healthCheck : Verifies if the testUrl provided for spider and active scan returns 2XX OR 3XX response
-  # skipTearDown: if enabled skips tearing down zap alerts, contex and policy
+  # When set to true the library deletes the run context and policy, and clears down all of the alerts generated during
+  # execution of the scans
+  tearDown = true
+
+  contextBaseUrl = ".*"
+  ignoreOptimizelyAlerts = false
+  testingAnApi = false
+  routeToBeIgnoredFromContext = ""
+  desiredTechnologyNames = "OS,OS.Linux,Language,Language.Xml,SCM,SCM.Git"
+  alertsBaseUrl = ""
+  alertsToIgnore = []
+
   debug {
-    healthCheck = true
-    skipTearDown = false
+    healthcheck=true
   }
 }
