Add scan run/no-run to html report Refactor

--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -29,18 +29,18 @@ zap-automation-config {
 
   # Required field. It will rarely need to be changed. We've included it as an overridable
   # field for flexibility and just in case.
-  zapBaseUrl = "http://localhost:11000"
+  zapBaseUrl = "http://zap.url.com"
 
   # Required field. It needs to be the URL of the start page of your application (not
   # just localhost:port).
-  testUrl = ""
+  testUrl = "something"
 
   # Not a required field. This url is added as the base url to your context.
   # A context is a construct in Zap that limits the scope of any attacks run to a
   # particular domain (this doesn't mean that Zap won't find alerts on other services during the
   # browser test run).
   # This would usually be the base url of your service - eg http://localhost:xxxx.*
-  contextBaseUrl = ".*"
+  contextBaseUrl = "http://context.base.url.*"
 
   # Not a required field. This value, if set to true, will ignore all alerts from optimizely.
   ignoreOptimizelyAlerts = false
@@ -50,7 +50,7 @@ zap-automation-config {
   # testing, it is likely to find alerts from other services that you don't own - for example
   # from logging in, therefore we recommend that you set this to be the base url for the
   # service you are interested in.
-  alertsBaseUrl = ""
+  alertsBaseUrl = "http://alerts.base.url"
 
   # Not a required field. You should set this to be true if you are testing an API.
   # By default this assumes you are testing a UI and therefore is defaulted to be false.
@@ -74,12 +74,10 @@ zap-automation-config {
   # you can filter them out by adding to this list, using the cweid and the url that the alert was found on.
   # The CWE ID is a Common Weakness Enumeration (http://cwe.mitre.org/data/index.html), you can
   # find this by looking at the alert output from your tests.
-  # example: alertsToIgnore = [{cweid: "16", url: "http://localhost:9999/hello/\\w{3}/here"},
-  # {cweid: "17", url: "http://localhost:9999/hello/\\w{3}/here"}]
   alertsToIgnore = []
 
   debug {
-    # Checks if the testUrl configured above returns a 2xx or 3xx response and fails if it returns anything else
+    # Checks if the testUrl configured above returns a 2xx or 3xx response
     healthCheck=true
 
     # When set to true the library deletes the run context and policy, and clears down all of the alerts generated during
