WIP: Fixed tests

--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -85,6 +85,6 @@ zap-automation-config {
     tearDown = true
 
     # Set to true if you would like zap-automation to print it's config to the console
-    printConfig=true
+    printConfig=false
   }
 }
