--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -33,7 +33,7 @@ zap-automation-config {
 
   # Required field. It needs to be the URL of the start page of your application (not
   # just localhost:port).
-  testUrl = "http://localhost:1234"
+  testUrl = "http://localhost:1234/abc/def"
 
   # Not a required field. This url is added as the base url to your context.
   # A context is a construct in Zap that limits the scope of any attacks run to a
