decompose ZapApi class

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -88,5 +88,7 @@ zap-automation-config {
 
     # Set to true if you would like zap-automation to print it's config to the console
     printConfig=true
+
+    patienceConfigTimeout=600
   }
 }
