--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -86,5 +86,7 @@ zap-automation-config {
 
     # Set to true if you would like zap-automation to print it's config to the console
     printConfig=false
+
+    patienceConfigTimeout=1
   }
 }
