Replaced Build.scala with build.sbt. Removed play dependency. Refactored to remove var usage. Moved classes under Util to Zap package.

--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -87,6 +87,7 @@ zap-automation-config {
     # Set to true if you would like zap-automation to print it's config to the console
     printConfig=false
 
+    # Tiemout value for patience config. Test times out if spider or active scan does not finish within configured time.
     patienceConfigTimeout=1
   }
 }
