--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -89,6 +89,7 @@ zap-automation-config {
     # Set to true if you would like zap-automation to print it's config to the console
     printConfig=true
 
+    # Tiemout value for patience config. Test times out if spider or active scan does not finish within configured time.
     patienceConfigTimeout=600
   }
 }
