Fixed formatting and added a comment in conf file.

--- a/examples/singleConfigExample/resources/singleConfigExampleApplication.conf
+++ b/examples/singleConfigExample/resources/singleConfigExampleApplication.conf
@@ -1,4 +1,5 @@
 # See /src/main/resources/references.conf for a full list of config options and its usage
+# Any configuration not specified in the application.conf will fallback to values provided in the src/main/resources/reference.conf
 zap-automation-config {
   ignoreOptimizelyAlerts: true
   testUrl: "http://localhost:9026/paye/company-car"
