--- a/examples/multipleConfigExample/resources/multipleConfigExampleApplication.conf
+++ b/examples/multipleConfigExample/resources/multipleConfigExampleApplication.conf
@@ -1,10 +1,7 @@
 # See /src/main/resources/references.conf for a full list of config options and its usage
+# Any configuration not specified in the application.conf will fallback to values provided in the src/main/resources/reference.conf
+
 zap-automation-config {
-  debug {
-    healthCheck: true
-    tearDown: false
-    printConfig: true
-  }
   ignoreOptimizelyAlerts: true
 }
 
