Check zap alerts for multiple urls.

--- a/examples/singleConfigExample/resources/singleConfigExampleApplication.conf
+++ b/examples/singleConfigExample/resources/singleConfigExampleApplication.conf
@@ -3,8 +3,11 @@
 zap-automation-config {
   ignoreOptimizelyAlerts: true
   testUrl: "http://localhost:9026/paye/company-car"
-  contextBaseUrl: "http://localhost:9026.*"
-  alertsBaseUrl: "http://localhost:9026"
+  contextBaseUrl: "http://localhost:(9026|9027).*"
+  alertUrlsToReport: [
+    "http://localhost:9026",
+    "http://localhost:9027",
+  ]
   alertsToIgnore: [
     {cweid: 829, url: "http://localhost:9026/paye/company-car/"},
     {cweid: 829, url: "http://localhost:9026/paye/company-car/fuel-benefit/3/cars/2/add"}
