--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -45,12 +45,12 @@ zap-automation-config {
   # Not a required field. This value, if set to true, will ignore all alerts from optimizely.
   ignoreOptimizelyAlerts = false
 
-  # Not a required field. This is the url that the zap-automation library
+  # Not a required field. These are the urls that the zap-automation library
   # will use to filter out the alerts that are shown to you. Note that while Zap is doing
   # testing, it is likely to find alerts from other services that you don't own - for example
-  # from logging in, therefore we recommend that you set this to be the base url for the
+  # from logging in, therefore we recommend that you set this to be urls for the
   # service you are interested in.
-  alertsBaseUrl = ""
+  alertUrlsToReport = []
 
   # Not a required field. You should set this to be true if you are testing an API.
   # By default this assumes you are testing a UI and therefore is defaulted to be false.
