--- a/examples/multipleConfigExample/resources/multipleConfigExampleApplication.conf
+++ b/examples/multipleConfigExample/resources/multipleConfigExampleApplication.conf
@@ -7,8 +7,11 @@ zap-automation-config {
 
 paye {
   testUrl: "http://localhost:9026/paye/company-car"
-  contextBaseUrl: "http://localhost:9026.*"
-  alertsBaseUrl: "http://localhost:9026"
+  contextBaseUrl: "http://localhost:(9026|9027).*"
+  alertUrlsToReport: [
+    "http://localhost:9026",
+    "http://localhost:9027"
+    ]
   alertsToIgnore: [
     {cweid: 829, url: "http://localhost:9026/paye/company-car/"},
     {cweid: 829, url: "http://localhost:9026/paye/company-car/fuel-benefit/3/cars/2/add"}
@@ -20,7 +23,7 @@ paye {
 awrsLookUp {
   testUrl: "http://localhost:9511/check-the-awrs-register"
   contextBaseUrl: "http://localhost:9511.*"
-  alertsBaseUrl: "http://localhost:9511"
+  alertUrlsToReport: ["http://localhost:9511"]
   alertsToIgnore: [
     {cweid: 16, url: "http://ocsp.digicert.com/"},
     {cweid: 16, url: "http://localhost:9511/check-the-awrs-register/language/Cymraeg"}, #CookieNoHttpFlagForWelsh
