Renamed contextBaseUrl to contextBaseUrlRegex

--- a/examples/multipleConfigExample/resources/multipleConfigExampleApplication.conf
+++ b/examples/multipleConfigExample/resources/multipleConfigExampleApplication.conf
@@ -7,7 +7,7 @@ zap-automation-config {
 
 paye {
   testUrl: "http://localhost:9026/paye/company-car"
-  contextBaseUrl: "http://localhost:(9026|9027).*"
+  contextBaseUrlRegex: "http://localhost:(9026|9027).*"
   alertUrlsToReport: [
     "http://localhost:9026",
     "http://localhost:9027"
@@ -22,7 +22,7 @@ paye {
 
 awrsLookUp {
   testUrl: "http://localhost:9511/check-the-awrs-register"
-  contextBaseUrl: "http://localhost:9511.*"
+  contextBaseUrlRegex: "http://localhost:9511.*"
   alertUrlsToReport: ["http://localhost:9511"]
   alertsToIgnore: [
     {cweid: 16, url: "http://ocsp.digicert.com/"},
