--- a/examples/singleConfigExample/resources/singleConfigExampleApplication.conf
+++ b/examples/singleConfigExample/resources/singleConfigExampleApplication.conf
@@ -3,7 +3,7 @@
 zap-automation-config {
   ignoreOptimizelyAlerts: true
   testUrl: "http://localhost:9026/paye/company-car"
-  contextBaseUrl: "http://localhost:(9026|9027).*"
+  contextBaseUrlRegex: "http://localhost:(9026|9027).*"
   alertUrlsToReport: [
     "http://localhost:9026",
     "http://localhost:9027",
