--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,8 +31,8 @@ zap-automation-config {
   # field for flexibility and just in case.
   zapBaseUrl = "http://localhost:11000"
 
-  # Required field. It needs to be the URL of the start page of your application (not
-  # just localhost:port).
+  # Required field. This is the seed url for the spider scan. It needs to be the URL of the start page of
+  # your application (not just localhost:port).
   testUrl = ""
 
   # Not a required field. This url is added as the base url to your context.
@@ -40,7 +40,7 @@ zap-automation-config {
   # particular domain (this doesn't mean that Zap won't find alerts on other services during the
   # browser test run).
   # This would usually be the base url of your service - eg http://localhost:xxxx.*
-  contextBaseUrl = ".*"
+  contextBaseUrlRegex = ".*"
 
   # Not a required field. This value, if set to true, will ignore all alerts from optimizely.
   ignoreOptimizelyAlerts = false
@@ -71,7 +71,7 @@ zap-automation-config {
   desiredTechnologyNames = "OS,OS.Linux,Language,Language.Xml,SCM,SCM.Git"
 
   # If, when you run the Zap tests, you find alerts that you have investigated and don't see as a problem
-  # you can filter them out by adding to this list, using the cweid and the url that the alert was found on.
+  # you can filter them out by adding to this list, using the cweid and the url regex that the alert was found on.
   # The CWE ID is a Common Weakness Enumeration (http://cwe.mitre.org/data/index.html), you can
   # find this by looking at the alert output from your tests.
   # example: alertsToIgnore = [{cweid: "16", url: "http://localhost:9999/hello/\\w{3}/here"},
