--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -21,7 +21,7 @@ zap-automation-config {
   failureThreshold = "Low"
   zapBaseUrl = "http://zap.url.com"
   testUrl = "http://localhost:1234/abc/def"
-  contextBaseUrl = "http://context.base.url.*"
+  contextBaseUrlRegex = "http://context.base.url.*"
   ignoreOptimizelyAlerts = false
   alertUrlsToReport = []
   testingAnApi = false
