Increase patience config Interval

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -89,7 +89,10 @@ zap-automation-config {
     # Set to true if you would like zap-automation to print it's config to the console
     printConfig=true
 
-    # Tiemout value for patience config. Test times out if spider or active scan does not finish within configured time.
+    # Tiemout value for patience config in seconds. Test times out if spider or active scan does not finish within configured time.
     patienceConfigTimeout=600
+
+    # Interval value for patience config in seconds. Spider and Active Scan status is checked at this interval until the scan is completed.
+    patienceConfigInterval=2
   }
 }
