--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -34,5 +34,6 @@ zap-automation-config {
     tearDown = true
     printConfig=false
     patienceConfigTimeout=1
+    patienceConfigInterval=1
   }
 }
