PLATOPS-1582: New configurations listing default scanners. Ability for teams to add/ignore additional scanners.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -78,6 +78,82 @@ zap-automation-config {
   # {cweid: "17", url: "http://localhost:9999/hello/\\w{3}/here"}]
   alertsToIgnore = []
 
+  # Default list of scanners for which alerts will be shown in the report
+  defaultScanners = [
+    # PASSIVE SCANNERS
+    "2"     #Private IP Disclosure
+    "3"     #Session ID in URL Rewrite
+    "10010" #Cookie No HttpOnly Flag
+    "10011" #Cookie Without Secure Flag
+    "10015" #Incomplete or No Cache-control and Pragma HTTP Header Set
+    "10016" #Web Browser XSS Protection Not Enabled
+    "10017" #Cross-Domain JavaScript Source File Inclusion
+    "10019" #Content-Type Header Missing
+    "10020" #X-Frame-Options Header Scanner
+    "10021" #X-Content-Type-Options Header Missing
+    "10023" #Information Disclosure - Debug Error Messages
+    "10024" #Information Disclosure - Sensitive Informations in URL
+    "10025" #Information Disclosure - Sensitive Information in HTTP Referrer Header
+    "10026" #HTTP Parameter Override
+    "10027" #Information Disclosure - Suspicious Comments
+    "10032" #Viewstate Scanner
+    "10105" #Weak Authentication Method
+    "10202" #Absence of Anti-CSRF Tokens
+    "10040" #Secure Pages Include Mixed Content
+    "50001" #Script Passive Scan Rules
+    "50003" #Stats Passive Scan Rule
+    "90001" #Insecure JSF ViewState
+    "90011" #Charset Mismatch
+    "90022" #Application Error Disclosure
+
+    # ACTIVE SCANNERS
+    "0"     #Directory Browsing
+    "6"     #Path Traversal
+    "7"     #Remote File Inclusion
+    "42"    #Source Code Disclosure - SVN
+    "10045" #Source Code Disclosure - /WEB-INF folder
+    "10048" #Remote Code Execution - Shell Shock
+    "10095" #Backup File Disclosure
+    "20012" #Anti CSRF Tokens Scanner
+    "20014" #HTTP Parameter Pollution scanner
+    "20015" #Heartbleed OpenSSL Vulnerability
+    "20016" #Cross-Domain Misconfiguration
+    "20017" #Source Code Disclosure - CVE-2012-1823
+    "20018" #Remote Code Execution - CVE-2012-1823
+    "20019" #External Redirect
+    "30001" #Buffer Overflow
+    "30002" #Format String Error
+    "30003" #Integer Overflow Error
+    "40003" #CRLF Injection
+    "40008" #Parameter Tampering
+    "40009" #Server Side Include
+    "40012" #Cross Site Scripting (Reflected)
+    "40013" #Session Fixation
+    "40014" #Cross Site Scripting (Persistent)
+    "40016" #Cross Site Scripting (Persistent) - Prime
+    "40017" #Cross Site Scripting (Persistent) - Spider
+    "40018" #SQL Injection
+    "40019" #SQL Injection - MySQL
+    "40020" #SQL Injection - Hypersonic SQL
+    "40021" #SQL Injection - Oracle
+    "40022" #SQL Injection - PostgreSQL
+    "40023" #Possible Username Enumeration
+    "50000" #Script Active Scan Rules
+    "90019" #Server Side Code Injection
+    "90020" #Remote OS Command Injection
+    "90021" #XPath Injection
+    "90023" #XML External Entity Attack
+    "90024" #Generic Padding Oracle
+    "90025" #Expression Language Injection
+    "90028" #Insecure HTTP Method
+  ]
+
+  # Any additonal scanners teams want to use in addition to the defaultScanners
+  additionalScanners = []
+
+  # Any scanners for which teams don't want to see alerts goes here
+  ignoreScanners = []
+
   debug {
     # Checks if the testUrl configured above returns a 2xx or 3xx response and fails if it returns anything else
     healthCheck=true
