--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -28,6 +28,9 @@ zap-automation-config {
   routeToBeIgnoredFromContext = ""
   desiredTechnologyNames = "OS,OS.Linux,Language,Language.Xml,SCM,SCM.Git"
   alertsToIgnore = []
+  defaultScanners = []
+  additionalScanners = []
+  ignoreScanners = []
 
   debug {
     healthCheck=true
