PLATOPS-1975: Added configuration to set Zap ConnectionTimeout.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,4 +1,4 @@
-# Copyright 2018 HM Revenue & Customs
+# Copyright 2019 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -170,5 +170,8 @@ zap-automation-config {
 
     # Interval value for patience config in seconds. Spider and Active Scan status is checked at this interval until the scan is completed.
     patienceConfigInterval=2
+
+    # Zap connection timeout in seconds. Zap will timeout if a response is not received within the configured duration.
+    connectionTimeout=20
   }
 }
