PLATOPS-1975: Connection timeout will be called always. Either with default value in reference.conf or with the provided value

--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -38,5 +38,6 @@ zap-automation-config {
     printConfig=false
     patienceConfigTimeout=1
     patienceConfigInterval=1
+    connectionTimeout=20
   }
 }
