PLATOPS-1755: Allow configuring custom risk levels. Configured custom risk level for retire.js

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -148,6 +148,12 @@ zap-automation-config {
     "90028" #Insecure HTTP Method
   ]
 
+  customRiskConf = [
+    {
+      pluginId: "322420643", risk: "High"
+    }
+  ]
+
   # Any additonal scanners teams want to use in addition to the defaultScanners
   additionalScanners = []
 
