PLATOPS-1755: Added pluginName to conf as a comment

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -150,7 +150,7 @@ zap-automation-config {
 
   customRiskConf = [
     {
-      pluginId: "322420643", risk: "High"
+      pluginId: "322420643", risk: "High" #Retire.js
     }
   ]
 
