PLATOPS-1755: Add retire.js pluginId to the list of alerts to report.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -105,6 +105,7 @@ zap-automation-config {
     "90001" #Insecure JSF ViewState
     "90011" #Charset Mismatch
     "90022" #Application Error Disclosure
+    "322420463" #Retire.js
 
     # ACTIVE SCANNERS
     "0"     #Directory Browsing
@@ -150,7 +151,7 @@ zap-automation-config {
 
   customRiskConf = [
     {
-      pluginId: "322420643", risk: "High" #Retire.js
+      pluginId: "322420463", risk: "High" #Retire.js
     }
   ]
 
