PLATOPS-1292: [WIP] Fixed failing tests. Reports missing scanners in the report

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -79,75 +79,269 @@ zap-automation-config {
   alertsToIgnore = []
 
   # Default list of scanners for which alerts will be shown in the report
-  defaultScanners = [
-    # PASSIVE SCANNERS
-    "2"     #Private IP Disclosure
-    "3"     #Session ID in URL Rewrite
-    "10010" #Cookie No HttpOnly Flag
-    "10011" #Cookie Without Secure Flag
-    "10015" #Incomplete or No Cache-control and Pragma HTTP Header Set
-    "10016" #Web Browser XSS Protection Not Enabled
-    "10017" #Cross-Domain JavaScript Source File Inclusion
-    "10019" #Content-Type Header Missing
-    "10020" #X-Frame-Options Header Scanner
-    "10021" #X-Content-Type-Options Header Missing
-    "10023" #Information Disclosure - Debug Error Messages
-    "10024" #Information Disclosure - Sensitive Informations in URL
-    "10025" #Information Disclosure - Sensitive Information in HTTP Referrer Header
-    "10026" #HTTP Parameter Override
-    "10027" #Information Disclosure - Suspicious Comments
-    "10032" #Viewstate Scanner
-    "10105" #Weak Authentication Method
-    "10202" #Absence of Anti-CSRF Tokens
-    "10040" #Secure Pages Include Mixed Content
-    "50001" #Script Passive Scan Rules
-    "50003" #Stats Passive Scan Rule
-    "90001" #Insecure JSF ViewState
-    "90011" #Charset Mismatch
-    "90022" #Application Error Disclosure
-    "322420463" #Retire.js
-
-    # ACTIVE SCANNERS
-    "0"     #Directory Browsing
-    "6"     #Path Traversal
-    "7"     #Remote File Inclusion
-    "42"    #Source Code Disclosure - SVN
-    "10045" #Source Code Disclosure - /WEB-INF folder
-    "10048" #Remote Code Execution - Shell Shock
-    "10095" #Backup File Disclosure
-    "20012" #Anti CSRF Tokens Scanner
-    "20014" #HTTP Parameter Pollution scanner
-    "20015" #Heartbleed OpenSSL Vulnerability
-    "20016" #Cross-Domain Misconfiguration
-    "20017" #Source Code Disclosure - CVE-2012-1823
-    "20018" #Remote Code Execution - CVE-2012-1823
-    "20019" #External Redirect
-    "30001" #Buffer Overflow
-    "30002" #Format String Error
-    "30003" #Integer Overflow Error
-    "40003" #CRLF Injection
-    "40008" #Parameter Tampering
-    "40009" #Server Side Include
-    "40012" #Cross Site Scripting (Reflected)
-    "40013" #Session Fixation
-    "40014" #Cross Site Scripting (Persistent)
-    "40016" #Cross Site Scripting (Persistent) - Prime
-    "40017" #Cross Site Scripting (Persistent) - Spider
-    "40018" #SQL Injection
-    "40019" #SQL Injection - MySQL
-    "40020" #SQL Injection - Hypersonic SQL
-    "40021" #SQL Injection - Oracle
-    "40022" #SQL Injection - PostgreSQL
-    "40023" #Possible Username Enumeration
-    "50000" #Script Active Scan Rules
-    "90019" #Server Side Code Injection
-    "90020" #Remote OS Command Injection
-    "90021" #XPath Injection
-    "90023" #XML External Entity Attack
-    "90024" #Generic Padding Oracle
-    "90025" #Expression Language Injection
-    "90028" #Insecure HTTP Method
-  ]
+  defaultScanners : {
+    passive : [
+         {
+            id : 2
+            name : Private IP Disclosure
+         }
+         {
+            id : 3
+            name: Session ID in URL Rewrite
+         }
+         {
+            id : 9999
+            name : TEST SCANNER
+         }
+         {
+             id : 999991
+             name : TEST SCANNER
+         }
+         {
+            id : 10010
+            name: Cookie No HttpOnly Flag
+         }
+         {
+            id : 10011
+            name: Cookie Without Secure Flag
+         }
+         {
+            id : 10015
+            name : Incomplete or No Cache-control and Pragma HTTP Header Set
+         }
+         {
+            id : 10016
+            name : Web Browser XSS Protection Not Enabled
+         }
+         {
+            id : 10017
+            name: Cross-Domain JavaScript Source File Inclusion
+         }
+         {
+            id : 10019
+            name : Content-Type Header Missing
+         }
+         {
+            id : 10020
+            name : X-Frame-Options Header Scanner
+          }
+          {
+            id : 10021
+            name : X-Content-Type-Options Header Missing
+          }
+          {
+            id : 10023
+            name : Information Disclosure - Debug Error Messages
+         }
+         {
+            id : 10024
+            name : Information Disclosure - Sensitive Informations in URL
+         }
+         {
+            id : 10025
+            name : Information Disclosure - Sensitive Information in HTTP Referrer Header
+         }
+         {
+            id : 10026
+            name : HTTP Parameter Override
+         }
+         {
+            id : 10027
+            name : Information Disclosure - Suspicious Comments
+         }
+         {
+            id : 10032
+            name : Viewstate Scanner
+         }
+         {
+            id : 10105
+            name : Weak Authentication Method
+         }
+         {
+            id : 10202
+            name : Absence of Anti-CSRF Tokens
+         }
+         {
+            id : 10040
+            name : Secure Pages Include Mixed Content
+         }
+         {
+            id : 50001
+            name : Script Passive Scan Rules
+         }
+         {
+            id : 50003
+            name : Stats Passive Scan Rule
+         }
+         {
+            id : 90001
+            name : Insecure JSF ViewState
+         }
+         {
+            id : 90011
+            name : Charset Mismatch
+         }
+         {
+            id : 90022
+            name : Application Error Disclosure
+         }
+         {
+            id : 322420463
+            name : Retire.js
+         }
+    ],
+    active = [
+        {   id : 0
+            name : Directory Browsing
+        }
+        {
+            id : 6
+            name : Path Traversal
+        }
+        {
+            id : 7
+            name : Remote File Inclusion
+        }
+        {
+            id : 42
+            name : Source Code Disclosure - SVN
+        }
+        {
+            id : 10045
+            name : Source Code Disclosure - /WEB-INF folder
+        }
+        {
+            id : 10048
+            name : Remote Code Execution - Shell Shock
+        }
+        {   id : 10095
+            name: Backup File Disclosure
+        }
+        {
+            id : 20012
+            name: Anti CSRF Tokens Scanner
+        }
+        {
+            id : 20014
+            name : HTTP Parameter Pollution scanner
+        }
+        {
+            id : 20015
+            name : Heartbleed OpenSSL Vulnerability
+        }
+        {
+            id : 20016
+            name : Cross-Domain Misconfiguration
+        }
+        {
+            id : 20017
+            name : Source Code Disclosure - CVE-2012-1823
+        }
+        {
+            id : 20018
+            name : Remote Code Execution - CVE-2012-1823
+        }
+        {
+            id : 20019
+            name : External Redirect
+        }
+        {
+            id : 30001
+            name : Buffer Overflow
+        }
+        {
+            id : 30002
+            name : Format String Error
+        }
+        {
+            id : 30003
+            name : Integer Overflow Error
+        }
+        {
+            id : 40003
+            name: CRLF Injection
+        }
+            id : 40008
+            name : Parameter Tampering
+        }
+        {
+            id : 40009
+            name : Server Side Include
+        }
+        {
+            id : 40012
+            name : Cross Site Scripting (Reflected)
+        }
+        {
+            id : 40013
+            name : Session Fixation
+        }
+        {
+            id : 40014
+            name : Cross Site Scripting (Persistent)
+        }
+        {   id : 40016
+            name : Cross Site Scripting (Persistent) - Prime
+        }
+        {
+            id  : 40017
+            name : Cross Site Scripting (Persistent) - Spider
+        }
+        {
+            id : 40018
+            name : SQL Injection
+        }
+        {
+            id : 40019
+            name : SQL Injection - MySQL
+        }
+        {
+            id : 40020
+            name : SQL Injection - Hypersonic SQL
+        }
+        {
+            id : 40021
+            name : SQL Injection - Oracle
+        }
+        {   id : 40022
+            name : SQL Injection - PostgreSQL
+        }
+            id : 40023
+            name : Possible Username Enumeration
+        }
+        {
+            id : 50000
+            name : Script Active Scan Rules
+        }
+        {
+            id : 90019
+            name : Server Side Code Injection
+        }
+            id : 90020
+            name : Remote OS Command Injection
+        }
+        {
+            id : 90021
+            name : XPath Injection
+        }
+        {
+            id : 90023
+            name : XML External Entity Attack
+        }
+        {
+            id : 90024
+            name : Generic Padding Oracle
+        }
+        {
+            id : 90025
+            name : Expression Language Injection
+        }
+        {
+            id : 90028
+            name : Insecure HTTP Method
+        }
+    ]
+   }
 
   customRiskConf = [
     {
