--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -28,7 +28,10 @@ zap-automation-config {
   routeToBeIgnoredFromContext = ""
   desiredTechnologyNames = "OS,OS.Linux,Language,Language.Xml,SCM,SCM.Git"
   alertsToIgnore = []
-  defaultScanners = []
+  defaultScanners = {
+    passive = [],
+    active = []
+  }
   additionalScanners = []
   ignoreScanners = []
 
