PLATOPS-1292: Renamed  to . Updated README. Removed incorrectly committed json files

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -79,7 +79,7 @@ zap-automation-config {
   alertsToIgnore = []
 
   # Default list of scanners for which alerts will be shown in the report
-  defaultScanners : {
+  scanners : {
     passive : [
          {
             id : 2
