--- a/src/test/resources/test.conf
+++ b/src/test/resources/test.conf
@@ -28,7 +28,7 @@ zap-automation-config {
   routeToBeIgnoredFromContext = ""
   desiredTechnologyNames = "OS,OS.Linux,Language,Language.Xml,SCM,SCM.Git"
   alertsToIgnore = []
-  defaultScanners = {
+  scanners = {
     passive = [],
     active = []
   }
