PLATUI-105: Fixed typo in comment

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -154,7 +154,7 @@ zap-automation-config {
 #            id : 10054
 #            name : Cookie Without SameSite Attribute
 #         }
-#   This scanner needs to be find tuned before enabling its alerts
+#   This scanner needs to be fine tuned before enabling its alerts
 #         {
 #            id : 10055
 #            name : Content Security Policy Scanner
