Update comments to configure ZAP with port 11000

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -30,7 +30,7 @@ zap-automation-config {
   # Required field. It will rarely need to be changed. We've included it as an overridable
   # field for flexibility and just in case.
   # When running ZAP locally, ZAP's port should be configured to run in port 11000 either from ZAP UI or
-  # by passing -port option via command line.
+  # by passing -port <portNumber> option via command line.
   zapBaseUrl = "http://localhost:11000"
 
   # Required field. This is the seed url for the spider scan. It needs to be the URL of the start page of
