--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -27,10 +27,9 @@ zap-automation-config {
   # Accepted Values: High, Medium, Low
   failureThreshold = "Low"
 
-  # Required field. It will rarely need to be changed. We've included it as an overridable
-  # field for flexibility and just in case.
-  # When running ZAP locally, ZAP's port should be configured to run in port 11000 either from ZAP UI or
-  # by passing -port <portNumber> option via command line.
+  # Required field. This does not need overridding when running zap-automation tests in CI.
+  # To keep your local test setup consistent with CI, you can configure the port that the OWASP ZAP API is exposed 
+  # on by including the '-port 11000' option when starting ZAP from the command line.
   zapBaseUrl = "http://localhost:11000"
 
   # Required field. This is the seed url for the spider scan. It needs to be the URL of the start page of
