PLATUI-389: Updated testUrl comments to more clearly explain the use of this property
Introduced the scan status UrlsNotCaptured to differentiate this from other passive scan error scenarios.

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,4 +1,4 @@
-# Copyright 2019 HM Revenue & Customs
+# Copyright 2020 HM Revenue & Customs
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -32,8 +32,9 @@ zap-automation-config {
   # on by including the '-port 11000' option when starting ZAP from the command line.
   zapBaseUrl = "http://localhost:11000"
 
-  # Required field. This is the seed url for the spider scan. It needs to be the URL of the start page of
-  # your application (not just localhost:port).
+  # Required field. This field has multiple uses.  It is the seed url passed to the spider scan, and, it is used as a
+  # check to ensure that clients/browsers have been configured correctly to proxy requests via ZAP.  It's best to set
+  # the testUrl value to the URL of the initial landing page of the service under test (not just localhost:port).
   testUrl = ""
 
   # Not a required field. This url is added as the base url to your context.
